@@ -40,7 +40,7 @@ struct _E_Smart_Data
    Evas_Object *clip;
    Evas_Object *map_overlay;   
    Evas_Object *nav;
-   Evas_Object *listview;   
+   Tag_List *listview;   
    Evas_Object *panel_buttons;
 
    Evas_Coord x, y, w, h;
@@ -87,7 +87,7 @@ _e_nav_tag_sel(void *data, void *data2)
     
    double lon = e_nav_world_item_location_lon_get(data2);
    double lat = e_nav_world_item_location_lat_get(data2);
-   evas_object_hide(sd->listview);
+   e_nav_taglist_deactivate(sd->listview);
    e_nav_coord_set(sd->nav, lon, lat, 0.0);
    evas_object_show(sd->nav);
    evas_object_show(sd->map_overlay);
@@ -127,10 +127,8 @@ _e_nav_list_button_cb_mouse_down(void *data, Evas *evas, Evas_Object *obj, void 
        printf("sd is NULL\n");
        return;
    }
-
    evas_object_hide(sd->nav);
    evas_object_hide(sd->map_overlay);
-   evas_object_show(sd->listview);
    e_nav_taglist_activate(sd->listview);
 }
 
@@ -153,7 +151,7 @@ _e_nav_refresh_button_cb_mouse_down(void *data, Evas *evas, Evas_Object *obj, vo
    lat = -lat;
    // ToDo:  set Follow me flag
    e_nav_coord_set(sd->nav, lon, lat, 0.0);
-   evas_object_hide(sd->listview);
+   e_nav_taglist_deactivate(sd->listview);
    evas_object_show(sd->nav);
    evas_object_show(sd->map_overlay);
    evas_object_show(sd->panel_buttons);
@@ -164,7 +162,7 @@ _e_nav_map_button_cb_mouse_down(void *data, Evas *evas, Evas_Object *obj, void *
 {
    E_Smart_Data *sd;
    sd = evas_object_smart_data_get(data);
-   evas_object_hide(sd->listview);
+   e_nav_taglist_deactivate(sd->listview);
    evas_object_show(sd->nav);
    evas_object_show(sd->map_overlay);
    evas_object_show(sd->panel_buttons);
@@ -272,9 +270,7 @@ e_ctrl_theme_source_set(Evas_Object *obj, const char *custom_dir)
 				  _e_nav_view_right,
 				  obj);
 
-   sd->listview = e_nav_taglist_add(evas_object_evas_get(obj));
-   e_nav_taglist_theme_source_set(sd->listview, THEME_PATH);
-   evas_object_hide(sd->listview);
+   sd->listview = e_nav_taglist_new(obj, THEME_PATH);
 
    sd->panel_buttons = _e_ctrl_theme_obj_new(evas_object_evas_get(obj), sd->dir,
 				      "modules/diversity_nav/panel");
@@ -397,7 +393,6 @@ _e_ctrl_smart_del(Evas_Object *obj)
    evas_object_del(sd->clip);
    evas_object_del(sd->map_overlay);
    evas_object_del(sd->panel_buttons);
-   evas_object_del(sd->listview);
    free(sd);
 }
 
@@ -414,7 +409,6 @@ _e_ctrl_smart_move(Evas_Object *obj, Evas_Coord x, Evas_Coord y)
    evas_object_move(sd->clip, sd->x, sd->y);
    evas_object_move(sd->map_overlay, sd->x, sd->y);
    evas_object_move(sd->panel_buttons, sd->x, sd->y);
-   evas_object_move(sd->listview, sd->x, sd->y);
 }
 
 static void
@@ -429,7 +423,6 @@ _e_ctrl_smart_resize(Evas_Object *obj, Evas_Coord w, Evas_Coord h)
    evas_object_resize(sd->clip, sd->w, sd->h);
    evas_object_resize(sd->map_overlay, sd->w, sd->h);
    evas_object_resize(sd->panel_buttons, sd->w, sd->h);
-   evas_object_resize(sd->listview, sd->w, sd->h);
 }
 
 static void
